--- a/common/style/commonStyle.css
+++ b/common/style/commonStyle.css
@@ -40,7 +40,6 @@ a{
     width: 100%;
     height: 140px;
     background: white;
-    position: fixed;
 }
 
 @media screen and (min-width: 1101px) and (max-width: 1550px) {
@@ -249,21 +248,24 @@ a{
     justify-content: center;
     align-items: center;
     height: 100%;
+
+    font-family: Roboto, sans-serif;
+    font-size: 18px;
+    /* font-weight: bold; */
 }
 
-.footer-text{
-    font-family: Roboto , sans-serif;
+/*.footer-text{
+    font-family: Roboto, sans-serif;
     font-size: 18px;
     font-weight: bold;
-    text-shadow: -1px 0 0 black;
 }
 
-.footer-text-year{
+ .footer-text-year{
     font-family: Century Gothic;
     margin-right: 5px;
     font-weight: normal;
     text-shadow: none;
-}
+} */
 
 .text-style{
     font-family: Roboto, sans-serif;
