--- a/page-gallery/style/galleryStyle.css
+++ b/page-gallery/style/galleryStyle.css
@@ -2,20 +2,19 @@
 
 .photo-gallery{
     width: 100%;
-    margin-top: 140px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-color: #fff;
 }
-@media screen and (min-width: 1101px) and (max-width: 1550px) {
+/* @media screen and (min-width: 1101px) and (max-width: 1550px) {
     .photo-gallery{
         margin-top: 111px;
     }
-}
+} */
 @media screen and (max-width: 1000px){
     .photo-gallery{
-        margin-top: 87px;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -81,12 +80,42 @@
     }
 }
 
-.row{
+.row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    overflow: hidden;
+}
+
+.photo-gallery-width-2,
+.photo-gallery-width-3,
+.column .img {
+    overflow: hidden;
+}
+
+.row.img img,
+.photo-gallery-width-2 img,
+.photo-gallery-width-3 img,
+.column img  {
+    transition: transform .6s ease-out;
+    will-change: transform;
+    transform-origin: 50% 50%;
+}
+
+.row.img:hover img,
+.photo-gallery-width-2:hover img,
+.photo-gallery-width-3:hover img,
+.column .img:hover img {
+    transform: scale(1.2);
+}
+
+.row.img:hover img,
+.photo-gallery-width-2:hover img,
+.photo-gallery-width-3:hover img,
+.column .img:hover img {
+    transform: scale(1.2);
 }
 
 .column{
@@ -103,7 +132,39 @@
     width: 31.32%;
 }
 
-img{
+.img {
+    position: relative;
+}
+
+.img::after {
+    position: absolute;
+    content: attr(data-description);
+    font-family: Roboto, sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    background-color: rgb(0, 0, 0, .6);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: all .6s ease-in-out;
+}
+
+.img:hover::after {
+    opacity: 1;
+}
+
+img {
     height: 100%;
     width: 100%;
+}
+
+.column.block-1 .row.img:first-child {
+    margin-bottom: 0;
 }
