--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -1,6 +1,6 @@
-.no-scroll{
+/* .no-scroll{
     overflow: hidden;
-}
+} */
 
 .scroll-body{
     overflow-x: hidden;
@@ -174,6 +174,10 @@
     width: 100%;
     position: absolute;
     top: 0;
+}
+
+main {
+    height: calc(100% - 210px);
 }
 
 /*.main-page{*/
