--- a/page-gallery/style/galleryStyle.css
+++ b/page-gallery/style/galleryStyle.css
@@ -99,7 +99,7 @@
 .photo-gallery-width-2 img,
 .photo-gallery-width-3 img,
 .column img  {
-    transition: transform .9s ease-out;
+    transition: transform 1.2s ease-out;
     will-change: transform;
     transform-origin: 50% 50%;
 }
@@ -152,7 +152,7 @@
     left: 0;
     opacity: 0;
     pointer-events: none;
-    transition: all .9s ease-in-out;
+    transition: all 1.2s ease-in-out;
 }
 
 .img:hover::after {
