--- a/page-gallery/style/galleryStyle.css
+++ b/page-gallery/style/galleryStyle.css
@@ -143,6 +143,7 @@
     font-size: 25px;
     display: flex;
     justify-content: center;
+    text-transform: uppercase;
     align-items: center;
     color: #fff;
     background-color: rgb(0, 0, 0, .4);
