--- a/page-gallery/style/galleryStyle.css
+++ b/page-gallery/style/galleryStyle.css
@@ -1,11 +1,13 @@
 /*////////////////////gallery///////////////////////*/
 
-.photo-gallery{
+.photo-gallery {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 0 18px;
+    box-sizing: border-box;
     background-color: #fff;
 }
 /* @media screen and (min-width: 1101px) and (max-width: 1550px) {
@@ -40,8 +42,9 @@
         flex-wrap: wrap;
     }
 }
-.img{
-    margin-bottom: 0.76vw;
+
+.img {
+    margin-bottom: 18px;
 }
 
 /*img{*/
