--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -51,6 +51,12 @@
 
 .slider-menu {
     width: 100%;
+    height: 100%;
+}
+
+.slick-list,
+.slick-track {
+    height: 100%;
 }
 
 .slider-img{
@@ -172,6 +178,7 @@
 
 .show-main-page{
     width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
 }
@@ -217,9 +224,6 @@ main {
 }
 
 /*//////////////footer/////////////////*/
-.footer{
-    margin-top: -2vh;
-}
 @media screen and (max-width: 1000px){
     .footer{
         margin-top: -2vw;
