--- a/common/style/commonStyle.css
+++ b/common/style/commonStyle.css
@@ -11,8 +11,8 @@
     position: relative;
 }
 
-.inner-container{
-    max-width: 94%;
+.inner-container {
+    max-width: 53%;
     width: 100%;
     margin: 0 auto;
     height: 100%;
@@ -26,7 +26,8 @@
 }
 
 @media screen and (max-width: 1100px) {
-    .inner-header-container {
+    .inner-header-container,
+    .footer .inner-container {
         max-width: 70%;
     }
 }
@@ -38,7 +39,7 @@ a{
 
 .header{
     width: 100%;
-    height: 140px;
+    height: 120px;
     background: white;
 }
 
@@ -46,15 +47,6 @@ a{
     .header{
         height: 111px;
     }
-}
-
-@media screen and (max-width: 1100px) {
-    .header {
-        height: 87px;
-        position: fixed;
-        top: 0;
-        background-color: white;
-        }
 }
 
 .header-content{
@@ -98,7 +90,6 @@ a{
     }
 }
 
-
 .secondary-logo-text{
     font-family: Roboto-light;
     font-size: 17px;
@@ -124,6 +115,13 @@ a{
     align-items: center;
 }
 
+@media screen and (max-width: 1450px) {
+    .inner-header-container,
+    .footer .inner-container {
+        max-width: 70%;
+    }
+}
+
 @media screen and (min-width: 1200px) and (max-width: 1550px) {
     .list-menu{
         font-size: 12px;
@@ -133,6 +131,24 @@ a{
 @media screen and (min-width: 981px) and (max-width: 1199px) {
     .list-menu{
         font-size: 11px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .header {
+        height: 87px;
+        background-color: white;
+    }
+
+    .inner-header-container,
+    .footer .inner-container {
+        box-sizing: border-box;
+        max-width: 100%;
+        padding: 0 20px;
+    }
+
+    .menu-item {
+        margin-left: 18px;
     }
 }
 
@@ -151,14 +167,16 @@ a{
     margin-right: 0;
 }
 
-@media screen and (max-width: 1100px){
-    .menu-item{
-        margin-left: 50px;
-    }
-}
+.home-link,
+.menu-item a {
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: rgb(100,100,100);
+ }
 
-.menu-item a{
-     color: rgb(100,100,100);
+ .menu-item.active a {
+    color: #000;
  }
 
 @media screen and (min-width: 1551px){
@@ -186,7 +204,13 @@ a{
 
 @media screen and (max-width: 980px) {
     .menu-item {
-        margin-right: 30px;
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 880px) {
+    .menu-item {
+        margin-left: 8px;
     }
 }
 /*//////////////////////////////*/
@@ -242,13 +266,12 @@ a{
 .footer-content{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
-
     font-family: Roboto, sans-serif;
-    font-size: 18px;
-    /* font-weight: bold; */
+    color: rgb(100, 100, 100);
+    font-size: 14px;
 }
 
 /*.footer-text{
@@ -268,4 +291,36 @@ a{
     font-family: Roboto, sans-serif;
     font-size: 14px;
     text-align: justify;
+}
+
+@media screen and (max-width: 820px) {
+    .hide-on-mobile {
+        display: none;
+    }
+}
+
+.footer-social-links {
+    list-style: none;
+}
+
+.social-link {
+    display: inline-block;
+    margin: 0 12px;
+    opacity: .7;
+    transition: opacity .3s ease-in-out;
+}
+
+.social-link img {
+    width: 19px;
+    height: 19px;
+}
+
+.social-link:hover {
+    opacity: 1;
+}
+
+@media screen and (max-width: 420px) {
+    .social-link {
+        margin: 0 5px;
+    }   
 }
