--- a/common/style/common.css
+++ b/common/style/common.css
@@ -25,6 +25,10 @@
     height: 100%;
 }
 
+.header-company-name {
+    color: #000;
+}
+
 @media screen and (max-width: 1100px) {
     .inner-header-container,
     .footer .inner-container {
